--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"version": 2, "routes": [{"src": "/(.*)", "dest": "/index.html"}]}
+{"rewrites": [{"source": "/(.*)", "destination": "/index.html"}]}
